--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
   text-size-adjust: 100%;
   box-sizing: border-box;
   font: 100%/1.3 sans-serif;
-  background-color: #E2E2E2;
+  background-color: #e2e2e2;
 }
 
 *, *::before, *::after {
@@ -20,16 +20,20 @@ html {
 
 body {
   margin: 0;
+  display: inline-block;
 }
 
 .body {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  padding-top: .8rem;
 }
 
 .img-flex {
-  max-width: 100%;
+  width: 100%;
   padding: 1rem;
+  display: block;
 }
 
 .content {
@@ -37,16 +41,20 @@ body {
   padding: 1rem;
 }
 
+h1 {
+  font-size: 1.5rem;
+}
+
 .btn {
   border: 1px solid #555;
-  border-radius: 4px;
-  background-color: #555;
 }
 
 a {
-  padding: 0.5em 0.75em;
+  padding: .5em .75em;
   color: #e2e2e2;
   text-decoration: none;
+  background-color: #555;
+  border-radius: 4px;
 }
 
 p {
@@ -54,32 +62,51 @@ p {
   padding-bottom: 1rem;
 }
 
+.btn:hover {
+  background-color: #000;
+}
+
 @media only screen and (min-width: 25em) {
 
+  html {
+    line-height: 1.3;
+    font-size: 110%;
+  }
+
   h1 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 
 }
 
 @media only screen and (min-width: 38em) {
 
-  .img-flex {
-    width: 100%;
-    margin-top: 3rem;;
-  }
-
-  .img {
-    width: 50%;
-  }
-
-  .content {
-    width: 50%;
-    font-size: 1rem;
+  html {
+    line-height: 1.4;
+    font-size: 110%;
+    display: flex;
   }
 
   .body {
     flex-direction: row;
+  }
+
+  .img-flex {
+    margin-top: 3rem;
+    max-width: 50em;
+  }
+
+  .img {
+    max-width: 50%;
+  }
+
+  .content {
+    max-width: 50%;
+    font-size: 1rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
   }
 
 }
@@ -98,6 +125,11 @@ p {
 }
 
 @media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+    align-items: center;
+  }
 
   .body {
     display: block;
