--- a/css/main.css
+++ b/css/main.css
@@ -128,12 +128,23 @@ p {
 
   html {
     font-size: 130%;
-    align-items: center;
   }
 
   .body {
-    display: block;
+    display: flex;
     padding: 0 3rem;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .content {
+    width: 50em;
+    padding-top: 0;
+    padding-left: 5rem;
+  }
+
+  .img-flex {
+    padding-right: 5rem;
   }
 
 }
